crates/rome_formatter/tests/specs/prettier/babel-plugins/record-tuple-record.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: record-tuple-record.js

---
# Input
```js
const record1 = #{
    a: 1,
    b: 2,
    c: 3,
};

const record2 = #{...record1, b: 5};

```

# Output
```js
const record1 = #
{
    a: 1,
    b: 2,
    c: 3,
};

const record2 = #{...record1, b: 5};

```

# Errors
```
error[SyntaxError]: expected `IDENT` but instead found `{`
  ┌─ record-tuple-record.js:1:18
  │
1 │ const record1 = #{
  │                  ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ record-tuple-record.js:3:6
  │  
2 │       a: 1,
  │ ┌────────'
3 │ │     b: 2,
  │ │      ^ An explicit or implicit semicolon is expected here...
  │ └──────' ...Which is required to end this statement

error[SyntaxError]: expected `IDENT` but instead found `{`
  ┌─ record-tuple-record.js:7:18
  │
7 │ const record2 = #{...record1, b: 5};
  │                  ^ unexpected

error[SyntaxError]: expected an expression but instead found '...record1, b: 5'
  ┌─ record-tuple-record.js:7:19
  │
7 │ const record2 = #{...record1, b: 5};
  │                   ^^^^^^^^^^^^^^^^ Expected an expression here

error[SyntaxError]: expected `'}'` but instead the file ends
  ┌─ record-tuple-record.js:8:1
  │
8 │ 
  │ ^ the file ends here


```


